Added functional login

--- a/style.css
+++ b/style.css
@@ -144,3 +144,13 @@ label {
 .back-link:hover {
   text-decoration: underline;
 }
+
+.error-message {
+    background-color: #ffdddd;
+    color: #ff0000;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+}
