--- a/index_style.css
+++ b/index_style.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
   font-family: Tahoma, sans-serif;
-  background: url('bgpic.png') no-repeat center center fixed;
+  background: url('bgpic2.png') no-repeat center center fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
